@@ -63,15 +63,8 @@ public class HomeService {
         List<RecentAuction> recentAuctions = auctionRepository.findTop6RecentAuctions(statuses, PageRequest.of(0, 6));
 
         return recentAuctions.stream()
-                .map(r -> RecentAuctionResponse.builder()
-                        .auctionId(r.getAuctionId())
-                        .title(r.getTitle())
-                        .description(r.getDescription())
-                        .status(r.getStatus())
-                        .basePrice(r.getBasePrice())
-                        .thumbnailUrl(r.getThumbnailUrl())
-                        .build())
-                .collect(Collectors.toList());
+                .map(RecentAuctionResponse::from)
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -82,17 +75,12 @@ public class HomeService {
         Map<Long, Integer> scrapCountMap = getScrapCounts(upcomingAuctions);
 
         return upcomingAuctions.stream()
-                .map(u -> UpcomingAuctionResponse.builder()
-                        .auctionId(u.getAuctionId())
-                        .title(u.getTitle())
-                        .description(u.getDescription())
-                        .itemCondition(u.getItemCondition())
-                        .basePrice(u.getBasePrice())
-                        .scrapCount(scrapCountMap.getOrDefault(u.getAuctionId(), 0))
-                        .thumbnailUrl(u.getThumbnailUrl())
-                        .leftTime(formatLeftTime(u.getStartTime()))
-                        .build())
-                .collect(Collectors.toList());
+                .map(u -> UpcomingAuctionResponse.from(
+                        u,
+                        scrapCountMap.getOrDefault(u.getAuctionId(), 0),
+                        formatLeftTime(u.getStartTime())
+                ))
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -115,16 +103,12 @@ public class HomeService {
         AtomicInteger rank = new AtomicInteger(1);
 
         return topWinningBidList.stream()
-                .map(t -> TopBidResponse.builder()
-                        .auctionId(t.getAuctionId())
-                        .title(t.getTitle())
-                        .basePrice(t.getBasePrice())
-                        .itemPrice(t.getItemPrice())
-                        .thumbnailUrl(t.getThumbnailUrl())
-                        .buyer(maskName(t.getBuyer()))
-                        .bidCount(bidCountMap.getOrDefault(t.getAuctionId(), 0))
-                        .rankNum(rank.getAndIncrement())
-                        .build())
+                .map(t -> TopBidResponse.from(
+                        t,
+                        maskName(t.getBuyer()),
+                        bidCountMap.getOrDefault(t.getAuctionId(), 0),
+                        rank.getAndIncrement()
+                ))
                 .toList();
     }
 
@@ -147,15 +131,11 @@ public class HomeService {
         return bidCounts.stream()
                 .map(b -> {
                     RankingAuction r = rankingMap.get(b.getAuctionId());
-                    return ActiveRankingResponse.builder()
-                            .auctionId(r.getAuctionId())
-                            .title(r.getTitle())
-                            .description(r.getDescription())
-                            .itemCondition(r.getItemCondition())
-                            .thumbnailUrl(r.getThumbnailUrl())
-                            .bidCount(b.getBidCount())
-                            .rankNum(rank.getAndIncrement())
-                            .build();
+                    return ActiveRankingResponse.from(
+                            r,
+                            b.getBidCount(),
+                            rank.getAndIncrement()
+                    );
                 })
                 .toList();
     }
@@ -179,15 +159,11 @@ public class HomeService {
         return scrapCounts.stream()
                 .map(b -> {
                     RankingAuction r = rankingMap.get(b.getAuctionId());
-                    return PendingRankingResponse.builder()
-                            .auctionId(r.getAuctionId())
-                            .title(r.getTitle())
-                            .description(r.getDescription())
-                            .itemCondition(r.getItemCondition())
-                            .thumbnailUrl(r.getThumbnailUrl())
-                            .scrapCount(b.getScrapCount())
-                            .rankNum(rank.getAndIncrement())
-                            .build();
+                    return PendingRankingResponse.from(
+                            r,
+                            b.getScrapCount(),
+                            rank.getAndIncrement()
+                    );
                 })
                 .toList();
     }
@@ -209,16 +185,13 @@ public class HomeService {
 
                     AtomicInteger rank = new AtomicInteger(1);
                     List<BestItemResponse> items = itemProjections.stream()
-                            .map(p -> BestItemResponse.builder()
-                                    .auctionId(p.getAuctionId())
-                                    .title(p.getTitle())
-                                    .status(p.getStatus())
-                                    .itemCondition(p.getItemCondition())
-                                    .thumbnailUrl(p.getThumbnailUrl())
-                                    .scrapCount(scrapMap.getOrDefault(p.getAuctionId(), 0))
-                                    .isAuctionImminent(isAuctionImminent(p.getStartTime()))
-                                    .rankNum(rank.getAndIncrement())
-                                    .build())
+                            .map(p -> BestItemResponse.from(
+                                    p,
+                                    isAuctionImminent(p.getStartTime()),
+                                    scrapMap.getOrDefault(p.getAuctionId(), 0),
+                                    rank.getAndIncrement()
+
+                            ))
                             .toList();
 
                     return SubCategoryBestItemResponse.builder()
